examples/diagnostics/expected/1275-diagnostics-use-state-trivial.stderr
error: use_state payload may not contain slices — use use_state_with under the entry allocator
  --> examples/diagnostics/1275-diagnostics-use-state-trivial.sx:16:13
   |
16 |         _ = use_state(Held, Held.{ name_bytes = .[], n = 0 });
   |             ^^^^^^^^^

note: raised by '#error' here
  --> library/modules/ui/store.sx:39:21
   |
39 |         case slice: #error("use_state payload may not contain slices — use use_state_with under the entry allocator");
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
